# AI-GPT-Interview-Simulator

./: README.md  pyproject.toml
notebooks/: DemoOpenAISimuladorEntrevistas.ipynb
src/: app.py  config.py  main.py  simulador_entrevista.py
src/.streamlit/: secrets.toml
